# nanobot-llm-wiki

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml
deploy/tencent/: Caddyfile.example  nanobot-llm-wiki-ui.service
scripts/: install.sh  uninstall.sh
src/nanobot_llm_wiki/: __init__.py  cli.py  diagnostics.py  formatting.py  installer.py  paths.py  storage.py  tools.py  ui.py
tests/: smoke_install.sh  test_cli_and_tools.py  test_storage.py  test_ui.py
