[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nanobot-llm-wiki"
version = "0.1.0"
description = "A deployable LLM Wiki long-term memory plugin for NanoBot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "yu-xin-c" }
]
keywords = ["nanobot", "agent", "memory", "wiki", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "nanobot-ai>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
nanobot-wiki = "nanobot_llm_wiki.cli:main"

[project.entry-points."nanobot.tools"]
wiki_doctor = "nanobot_llm_wiki.tools:WikiDoctorTool"
wiki_search = "nanobot_llm_wiki.tools:WikiSearchTool"
wiki_read = "nanobot_llm_wiki.tools:WikiReadTool"
wiki_upsert = "nanobot_llm_wiki.tools:WikiUpsertTool"
wiki_link = "nanobot_llm_wiki.tools:WikiLinkTool"
wiki_forget = "nanobot_llm_wiki.tools:WikiForgetTool"
wiki_import = "nanobot_llm_wiki.tools:WikiImportTool"
wiki_status = "nanobot_llm_wiki.tools:WikiStatusTool"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
